Triangle class wrapped and working

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -153,8 +153,8 @@ extout_prefix =
 target_prefix = 
 LOCAL_LIBS = 
 LIBS = -lrice -lruby-1.9.1 -lpthread -lrt -ldl -lcrypt -lm   -lc  -lCGAL -lgmp -lmpfr -lqt-mt  -lGL -lGLU -lglut -lCGAL_Qt3 -lCGAL_Core 
-SRCS = rb_SHalfedge.cpp rb_Halffacet.cpp rb_Point_3.cpp rb_Halfedge.cpp rb_Polygon_with_holes_2.cpp rb_Polygon_set_2.cpp rb_Aff_transformation_3.cpp rb_SVertex.cpp rb_Offset_polygon_with_holes_2.cpp rb_Polygon_2.cpp rb_SFace.cpp rb_Lazy_exact_nt.cpp rb_Offset_polygon_2.cpp rb_Nef_polyhedron_3.cpp rb_Vertex.cpp rb_Iso_cuboid_3.cpp cgal.cpp rb_X_monotone_curve_2.cpp rb_Point_2.cpp
-OBJS = rb_SHalfedge.o rb_Halffacet.o rb_Point_3.o rb_Halfedge.o rb_Polygon_with_holes_2.o rb_Polygon_set_2.o rb_Aff_transformation_3.o rb_SVertex.o rb_Offset_polygon_with_holes_2.o rb_Polygon_2.o rb_SFace.o rb_Lazy_exact_nt.o rb_Offset_polygon_2.o rb_Nef_polyhedron_3.o rb_Vertex.o rb_Iso_cuboid_3.o cgal.o rb_X_monotone_curve_2.o rb_Point_2.o
+SRCS = rb_SHalfedge.cpp rb_Halffacet.cpp rb_Point_3.cpp rb_Halfedge.cpp rb_Polygon_with_holes_2.cpp rb_Polygon_set_2.cpp rb_Aff_transformation_3.cpp rb_Triangle_3.cpp rb_SVertex.cpp rb_Offset_polygon_with_holes_2.cpp rb_Polygon_2.cpp rb_SFace.cpp rb_Lazy_exact_nt.cpp rb_Offset_polygon_2.cpp rb_Nef_polyhedron_3.cpp rb_Vertex.cpp rb_Iso_cuboid_3.cpp cgal.cpp rb_X_monotone_curve_2.cpp rb_Point_2.cpp
+OBJS = rb_SHalfedge.o rb_Halffacet.o rb_Point_3.o rb_Halfedge.o rb_Polygon_with_holes_2.o rb_Polygon_set_2.o rb_Aff_transformation_3.o rb_Triangle_3.o rb_SVertex.o rb_Offset_polygon_with_holes_2.o rb_Polygon_2.o rb_SFace.o rb_Lazy_exact_nt.o rb_Offset_polygon_2.o rb_Nef_polyhedron_3.o rb_Vertex.o rb_Iso_cuboid_3.o cgal.o rb_X_monotone_curve_2.o rb_Point_2.o
 TARGET = cgal
 DLLIB = $(TARGET).so
 EXTSTATIC = 
